@@ -83,10 +83,12 @@ LanguageTool Change Log
     -Improved configuration dialog
     -Allow the user to change the font of the main editing area
 
-Rule syntax:
+-Rule syntax:
     -It is now possible to specify case sensitivity of individual exceptions
      and tokens in a pattern (both in grammar and disambiguation XML rules).
      Simply use case_sensitive="yes" or case_sensitive="no".
+    -The 'url' element can now be added to the 'rulegroup' so that all rules
+     of a rule group share the same URL.
 
 -Internals:
     -Fixed bug with longer complex strings of tokens to be unified
